# TaskSchedulingNew

./: .gitignore  1.html  Cargo.toml  README.md
crates/scheduler/: Cargo.toml  lib.rs
crates/scheduler/examples/: comprehensive_test.rs  download_and_split_example.rs  download_model.rs  split_task_test.rs  verify_split_logic.rs
crates/scheduler/src/: config.rs  data_preparator.rs  error.rs  lib.rs  mod.rs  model_def.rs  model_downloader.rs  result_merger.rs  scheduler.rs  task.rs  task_executor.rs  task_splitter.rs  types.rs  wasi_nn_extension.rs
crates/scheduler/src/model_def/: switch_transformer.rs
