[package]
name = "task-scheduling"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["crates/scheduler"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
rustacuda = "0.1"
uuid = { version = "1.0", features = ["v4"] }
rand = "0.8"
anyhow = "1.0"
serde_json = "1.0"

[[example]]
name = "download_and_split_example"
path = "examples/download_and_split_example.rs"
